--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,8 +2,17 @@
     /*max-width: 1190px;*/
     /*margin: 0 auto;*/
 /*}*/
+
+html {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 header .tabs li {
     text-transform: uppercase;
+}
+
+h2 {
+    text-transform: capitalize;
 }
 
 .title {
@@ -11,14 +20,20 @@ header .tabs li {
 }
 .title h1 {
     text-transform: uppercase;
-    line-height:4em;
+    font-size: 35px;
+    /*line-height:4em;*/
+}
+
+.mission h2 {
+    /*text-transform: capitalize;*/
+    /*text-align: center;*/
 }
 
 header {
     background: yellow;
 }
 
-.description .paragraph-container {
+.mission .paragraph-container {
     margin: 0 auto;
     max-width: 1190px;
 }
